# FlappyEye

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  vcpkg-configuration.json  vcpkg.json
assets/: CMakeLists.txt
assets/background/: LICENSE
assets/sprites/: fire.LICENSE  flappy.LICENSE
assets/tiles/: atlas.LICENSE
src/: CMakeLists.txt  fe_app.c  fe_app.h  fe_img.c  fe_inp.c  fe_inp.h  fe_scn.c  fe_scn.h  fe_sys.c  fe_sys.h  fe_vec.c  fe_vec.h  main.c
